test: rename example file and update database configuration for testing

--- a/.env.dusk.local.example
+++ b/.env.dusk.local.example
@@ -24,7 +24,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=calambrazo_silver_oslo
+DB_DATABASE=test-calambrazos
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -65,4 +65,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-COOKIE_VOTES=
+COOKIE_VOTES=test
